argo-apps/drupal-chart/templates/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: drupal-gateway
  namespace: drupal-prod # Целевой namespace приложения
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "drupal.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drupal-virtualservice
  namespace: drupal-prod
spec:
  hosts:
    - "drupal.local"
  gateways:
    - drupal-gateway
  http:
    - route:
        - destination:
            # Имя сервиса, которое Helm сгенерирует автоматически на основе имени релиза
            host: drupal-homework-chart
            port:
              number: 8080 # Порт из нашего values.yaml
